2003-11-19  Albert Chu <chu11@llnl.gov>

	* config/ac_static_modules.m4: Fixed variable names.  Variable
	names were changed in ac_qshell.m4 and ac_mqshell.m4, but never
	modified in this particular macro.

2003-11-13  Albert Chu <chu11@llnl.gov>

	* src/qsnet/mqshd.c (getifrlen): Added fix for ia64 portability
	issue.

2003-11-12  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec.in: Only build ssh and rsh modules by default. All
	other modules must be enabled via --with <pkg> on rpmbuild 
	command line.

	* config/Make-rpm.mk: Pass options to rpmbuild via WITH_OPTIONS and
	WITHOUT_OPTIONS environment variable (instead of ``rpmargs'').

2003-11-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/ltdl.c, config/libtool.m4 : Update to libtool 1.4.3.

	* src/pdsh/opt.c (_show_version, _usage) : Created common function
	to print list of loaded rcmd modules.

2003-10-28  Mark Grondona <mgrondona@llnl.gov>
	
	* src/pdsh/Makefile.am : Removed QSW_LIBS from pdsh binaries.

2003-10-27  Jim Garlick <garlick@llnl.gov>

	* src/qsnet/qswutil.c (qsw_decode_cap) : Changed format
	for cap->cap_elan_type/cap->cap_spare to %hx from %x. This
 	member is unsigned short.
 
2003-10-14  Mark Grondona <mgrondona@llnl.gov>

	* Makefile.am, pdsh.spec.in: Do not install pdsh/pdcp with setuid
	bits on by default.

	* src/modules/mcmd.c, src/modules/mqcmd.c (rcmd_init): drop
	elevated permissions if they are set.

2003-10-13  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_mqshell.m4, config/ac_qshell.m4, config/ac_elan.m4:
	Abstract Elan tests into AC_ELAN macro. Test for either libelanctrl
	or libelan3.

	* src/qsnet/qswutil.c: Integrate patch from Quadrics to support
 	new QSW elanctrl interface.
	
2003-10-12  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qshell.c (getpwnam_common): return copy of passwd
	struct alloc'd on heap instead of return value from getpwnam.

	* src/common/hostlist.c: update to latest hostlist code from
	LSD-Tools project.
 